--- a/login.html
+++ b/login.html
@@ -21,18 +21,20 @@
         </div>
     </header>
 
-    <section id="banner">
-    </section>
+        <section id="form-log">
+        <form action="" class="form-login">
+            <h2 class="form-title">Iniciar Sesión</h2>
+            <div class="contenedor-inputs">
 
-    <section id="bienvenida">
-    </section>
+                <input type="email" name="email" placeholder="Correo Electrónico" class="input-100" required>
 
-    <section id="articulos">
-    </section>
+                <input type="password" name="password" placeholder="Contraseña" class="input-100" required>
 
-    <section id="">
-    </section>
+                <p class="form-link">Crea tu cuenta <a href="registro.html">¡Hazlo aquí!</a></p>
 
+            </div>
+        </form>
+    </section>
 
     <footer>
         <div class="contenedor">
