--- a/registro.html
+++ b/registro.html
@@ -21,22 +21,35 @@
         </div>
     </header>
 
-    <section id="banner">
-    </section>
 
-    <section id="bienvenida">
-    </section>
+    <section id="form-registro">
+        <form action="" class="form-register">
+            <h2 class="form-title">Crear Cuenta</h2>
+            <div class="contenedor-inputs">
 
-    <section id="articulos">
-    </section>
+                <input type="text" name="nombre" placeholder="Nombre" class="input-48" required>
 
-    <section id="">
-    </section>
+                <input type="text" name="apellidos" placeholder="Apellidos" class="input-48" required>
 
+                <input type="email" name="email" placeholder="Correo Electrónico" class="input-100" required>
+
+                <input type="text" name="user" placeholder="Usuario" class="input-48" required>
+
+                <input type="password" name="password" placeholder="Contraseña" class="input-48" required>
+
+                <input type="text" name="telephone" placeholder="Número Telefónico" class="input-100" required>
+
+                <input type="submit" value="Registrarse" class="btn-enviar">
+
+                <p class="form-link">¿Ya eres usuario? <a href="login.html">¡Ingresa aquí!</a></p>
+
+            </div>
+        </form>
+    </section>
 
     <footer>
         <div class="contenedor">
-            <p class="info-sitio">Fundamentos de Desarrollo Web &copy; 2021</p>
+            <p class="info-sitio" >Fundamentos de Desarrollo Web &copy; 2021</p>
             <div class="sociales">
                 <a class="icon-facebook" href="https://www.facebook.com/acominf/" target="_blank"></a>
                 <a class="icon-instagram"href="https://www.instagram.com/ingenieriauaslp/" target="_blak"></a>
