--- a/carrito.html
+++ b/carrito.html
@@ -4,39 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | Diagon Alley Online</title>
+    <title>Shopping Cart | Diagon Alley Online</title>
     <link rel="shortcut icon" href="img/reliquias.ico">
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+
     <header>
         <div class="contenedor">
             <a href="index.html"><h1 class="icon-leaf">Diagon Alley Online</h1></a>
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu-outline" for="menu-bar"></label>
             <nav class="menu">
-                <a href="registro.html">Crea tu cuenta</a>
+                <a href="perfil.html">Mi Perfil</a>
+                <a href="compras.html">Compras</a>
+                <a href="index.html">Salir</a>
             </nav>
         </div>
     </header>
 
-        <section id="form-log">
-        <form action="index-login.html" class="form-login">
-            <h2 class="form-title">Iniciar Sesión</h2>
-            <div class="contenedor-inputs">
+    <main>
 
-                <input type="email" name="email" placeholder="Correo Electrónico" class="input-100">
 
-                <input type="password" name="password" placeholder="Contraseña" class="input-100">
-
-                <input type="submit" value="Entrar" class="btn-entrar">
-
-                <p class="form-link">Crea tu cuenta <a href="registro.html">¡Hazlo aquí!</a></p>
-
-            </div>
-        </form>
-    </section>
+    </main>
 
     <footer>
         <div class="contenedor">
