--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro | Diagon Alley Online</title>
+    <title>Create Account | Diagon Alley Online</title>
     <link rel="shortcut icon" href="img/reliquias.ico">
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/estilos.css">
@@ -23,21 +23,21 @@
 
 
     <section id="form-registro">
-        <form action="" class="form-register">
+        <form action="index-login.html" class="form-register">
             <h2 class="form-title">Crear Cuenta</h2>
             <div class="contenedor-inputs">
 
-                <input type="text" name="nombre" placeholder="Nombre" class="input-48" required>
+                <input type="text" name="nombre" placeholder="Nombre" class="input-48">
 
-                <input type="text" name="apellidos" placeholder="Apellidos" class="input-48" required>
+                <input type="text" name="apellidos" placeholder="Apellidos" class="input-48">
 
-                <input type="email" name="email" placeholder="Correo Electrónico" class="input-100" required>
+                <input type="email" name="email" placeholder="Correo Electrónico" class="input-100">
 
-                <input type="text" name="user" placeholder="Usuario" class="input-48" required>
+                <input type="text" name="user" placeholder="Usuario" class="input-48">
 
-                <input type="password" name="password" placeholder="Contraseña" class="input-48" required>
+                <input type="password" name="password" placeholder="Contraseña" class="input-48">
 
-                <input type="text" name="telephone" placeholder="Número Telefónico" class="input-100" required>
+                <input type="text" name="telephone" placeholder="Número Telefónico" class="input-100">
 
                 <input type="submit" value="Registrarse" class="btn-enviar">
 
